// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CTypeDetails > should handle hidden CType 1`] = `
<body>
  <header>
    <a href="/" class="logo"><img src="/src/components/Header/logo.svg" alt="CTypeHub logo" width="79" height="79" loading="lazy" decoding="async" /></a><a href="/create" class="_primary"> Create Claim Type </a>
  </header>
  <main>
    <h1>Page not found</h1>
  </main>
  <footer>
    <nav><!-- TODO: links to legal docs --></nav>
    <p>
      Made with ♥︎ by
      <img src="/src/components/Footer/galaniprojects.svg" class="galaniLogo" alt="galaniprojects logo" width="153" height="24" loading="lazy" decoding="async" />
      © 2023
    </p>
    <img src="/src/components/Footer/built_on_kilt.svg" class="kiltLogo" alt="built on KILT logo" width="114" height="28" loading="lazy" decoding="async" />
  </footer>
</body>
`;

exports[`CTypeDetails > should handle kitchen sink CType 1`] = `
<section class="_container">
  <h1 class="title">Everything everywhere</h1>
  <fieldset>
    <legend>Creator</legend>
    <p>did:kilt:4rrkiRTZgsgxjJDFkLsivqqKTqdUTuxKk3FX3mKFAeMxsR5E</p>
  </fieldset>
  <fieldset>
    <legend>Number of attestations</legend>
    <p>4444</p>
  </fieldset>
  <fieldset>
    <legend>Description:</legend>
    <p>…all the time</p>
  </fieldset>
  <fieldset>
    <legend>Creation date</legend>
    <time datetime="2023-05-01T12:03:00.000Z">Mon, 01 May 2023 12:03:00 GMT</time>
  </fieldset>
  <fieldset>
    <legend>Property 1</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">Array</dd>
      <dt class="_term">Type:</dt>
      <dd class="_definition">array</dd>
      <dt class="_term">Type of items:</dt>
      <dd class="_definition">string</dd>
      <dt class="_term">Format:</dt>
      <dd class="_definition">date</dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Property 2</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">Boolean</dd>
      <dt class="_term">Type:</dt>
      <dd class="_definition">boolean</dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Property 3</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">Integer</dd>
      <dt class="_term">Type:</dt>
      <dd class="_definition">integer</dd>
      <dt class="_term">Allowed values:</dt>
      <dd class="_definition">
        <ul>
          <li>1</li>
          <li>10000</li>
          <li>2</li>
          <li>3</li>
          <li>4</li>
        </ul>
      </dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Property 4</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">Number</dd>
      <dt class="_term">Type:</dt>
      <dd class="_definition">number</dd>
      <dt class="_term">Minimum value:</dt>
      <dd class="_definition">12.34</dd>
      <dt class="_term">Maximum value:</dt>
      <dd class="_definition">56.78</dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Property 5</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">Reference</dd>
      <dt class="_term">Referenced Claim Type:</dt>
      <dd class="_definition">
        <a class="_anchor" href="/ctype/kilt:ctype:0xa8e68ac37f1a062b1432840d883e4c8be71deca13d539e0b00a8a74f4e3f6789">kilt:ctype:0xa8e68ac37f1a062b1432840d883e4c8be71deca13d539e0b00a8a74f4e3f6789</a>
      </dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Property 6</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">String</dd>
      <dt class="_term">Type:</dt>
      <dd class="_definition">string</dd>
      <dt class="_term">Minimum length:</dt>
      <dd class="_definition">1</dd>
      <dt class="_term">Maximum length:</dt>
      <dd class="_definition">100</dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Transaction</legend>
    <a href="https://example.subscan.io/extrinsic/0xexamplehash">0xexamplehash</a>
  </fieldset>
  <fieldset>
    <legend>Technical Details</legend>
    <div id="details">
      <pre>
{
  &quot;$id&quot;: &quot;kilt:ctype:0x060fe62fbe19e99f3440d829dec705f92d35b833d8c8927d8d94462737af2d90&quot;,
  &quot;$schema&quot;: &quot;ipfs://bafybeiah66wbkhqbqn7idkostj2iqyan2tstc4tpqt65udlhimd7hcxjyq/&quot;,
  &quot;additionalProperties&quot;: false,
  &quot;properties&quot;: {
    &quot;Array&quot;: {
      &quot;items&quot;: {
        &quot;format&quot;: &quot;date&quot;,
        &quot;type&quot;: &quot;string&quot;
      },
      &quot;type&quot;: &quot;array&quot;
    },
    &quot;Boolean&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    },
    &quot;Integer&quot;: {
      &quot;enum&quot;: [
        1,
        10000,
        2,
        3,
        4
      ],
      &quot;type&quot;: &quot;integer&quot;
    },
    &quot;Number&quot;: {
      &quot;maximum&quot;: 56.78,
      &quot;minimum&quot;: 12.34,
      &quot;type&quot;: &quot;number&quot;
    },
    &quot;Reference&quot;: {
      &quot;$ref&quot;: &quot;kilt:ctype:0xa8e68ac37f1a062b1432840d883e4c8be71deca13d539e0b00a8a74f4e3f6789&quot;
    },
    &quot;String&quot;: {
      &quot;maxLength&quot;: 100,
      &quot;minLength&quot;: 1,
      &quot;type&quot;: &quot;string&quot;
    }
  },
  &quot;title&quot;: &quot;Everything everywhere&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre>
    </div>
  </fieldset>
</section>
`;

exports[`CTypeDetails > should handle nested CType 1`] = `
<section class="_container">
  <h1 class="title">Example nested CType</h1>
  <fieldset>
    <legend>Creator</legend>
    <p>did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY</p>
  </fieldset>
  <fieldset>
    <legend>Number of attestations</legend>
    <p>333</p>
  </fieldset>
  <fieldset>
    <legend>Description:</legend>
    <p>This is an example of a CType with a nested CType</p>
  </fieldset>
  <fieldset>
    <legend>Creation date</legend>
    <time datetime="2023-05-01T12:02:00.000Z">Mon, 01 May 2023 12:02:00 GMT</time>
  </fieldset>
  <fieldset>
    <legend>Property 1</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">example</dd>
      <dt class="_term">Referenced Claim Type:</dt>
      <dd class="_definition">
        <a class="_anchor" href="/ctype/kilt:ctype:0x1">kilt:ctype:0x1</a>
      </dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Property 2</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">hasNestedCType</dd>
      <dt class="_term">Type:</dt>
      <dd class="_definition">boolean</dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Transaction</legend>
    <a href="https://example.subscan.io/extrinsic/0xexamplehash">0xexamplehash</a>
  </fieldset>
  <fieldset>
    <legend>Technical Details</legend>
    <div id="details">
      <pre>
{
  &quot;$id&quot;: &quot;kilt:ctype:0x1692376199a5a74445bec96882d2d0313042d445906e6faa21f30949150a3779&quot;,
  &quot;$schema&quot;: &quot;http://kilt-protocol.org/draft-01/ctype#&quot;,
  &quot;properties&quot;: {
    &quot;example&quot;: {
      &quot;$ref&quot;: &quot;kilt:ctype:0x1&quot;
    },
    &quot;hasNestedCType&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    }
  },
  &quot;title&quot;: &quot;Example nested CType&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre>
    </div>
  </fieldset>
</section>
`;

exports[`CTypeDetails > should handle nested CType property 1`] = `
<section class="_container">
  <h1 class="title">Example nested CType property</h1>
  <fieldset>
    <legend>Creator</legend>
    <p>did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY</p>
  </fieldset>
  <fieldset>
    <legend>Number of attestations</legend>
    <p>22</p>
  </fieldset>
  <fieldset>
    <legend>Description:</legend>
    <p>This is an example of a CType with a nested property</p>
  </fieldset>
  <fieldset>
    <legend>Creation date</legend>
    <time datetime="2023-05-01T12:01:00.000Z">Mon, 01 May 2023 12:01:00 GMT</time>
  </fieldset>
  <fieldset>
    <legend>Property 1</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">example</dd>
      <dt class="_term">Referenced Claim Type:</dt>
      <dd class="_definition">
        <a class="_anchor" href="/ctype/kilt:ctype:0x1#/properties/example">kilt:ctype:0x1#/properties/example</a>
      </dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Property 2</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">hasNestedProperty</dd>
      <dt class="_term">Type:</dt>
      <dd class="_definition">boolean</dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Transaction</legend>
    <a href="https://example.subscan.io/extrinsic/0xexamplenestedhash">0xexamplenestedhash</a>
  </fieldset>
  <fieldset>
    <legend>Technical Details</legend>
    <div id="details">
      <pre>
{
  &quot;$id&quot;: &quot;kilt:ctype:0x9775780b45911ece6e960dcc3eb630ea1579988d0b58c1ee2a19e2b14eeb9904&quot;,
  &quot;$schema&quot;: &quot;http://kilt-protocol.org/draft-01/ctype#&quot;,
  &quot;properties&quot;: {
    &quot;example&quot;: {
      &quot;$ref&quot;: &quot;kilt:ctype:0x1#/properties/example&quot;
    },
    &quot;hasNestedProperty&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    }
  },
  &quot;title&quot;: &quot;Example nested CType property&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre>
    </div>
  </fieldset>
</section>
`;

exports[`CTypeDetails > should match snapshot 1`] = `
<section class="_container">
  <h1 class="title">Example CType</h1>
  <fieldset>
    <legend>Creator</legend>
    <p>did:kilt:4pehddkhEanexVTTzWAtrrfo2R7xPnePpuiJLC7shQU894aY</p>
  </fieldset>
  <fieldset>
    <legend>Number of attestations</legend>
    <p>1</p>
  </fieldset>
  <fieldset>
    <legend>Description:</legend>
    <p>This is some example cType data</p>
  </fieldset>
  <fieldset>
    <legend>Creation date</legend>
    <time datetime="2023-05-01T12:00:00.000Z">Mon, 01 May 2023 12:00:00 GMT</time>
  </fieldset>
  <fieldset>
    <legend>Property 1</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">example</dd>
      <dt class="_term">Type:</dt>
      <dd class="_definition">string</dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Property 2</legend>
    <dl>
      <dt class="_term">Name:</dt>
      <dd class="_definition">isExample</dd>
      <dt class="_term">Type:</dt>
      <dd class="_definition">boolean</dd>
    </dl>
  </fieldset>
  <fieldset>
    <legend>Transaction</legend>
    <a href="https://example.subscan.io/extrinsic/0xexamplehash">0xexamplehash</a>
  </fieldset>
  <fieldset>
    <legend>Tags</legend>
    <ul>
      <li><a href="/tag/example">#example</a></li>
    </ul>
  </fieldset>
  <fieldset>
    <legend>Technical Details</legend>
    <div id="details">
      <pre>
{
  &quot;$id&quot;: &quot;kilt:ctype:0xf3b3e856755acaa7f274a15b99baf636a306a2a96e1c324a8cbb12b0bc1716af&quot;,
  &quot;$schema&quot;: &quot;http://kilt-protocol.org/draft-01/ctype#&quot;,
  &quot;properties&quot;: {
    &quot;example&quot;: {
      &quot;type&quot;: &quot;string&quot;
    },
    &quot;isExample&quot;: {
      &quot;type&quot;: &quot;boolean&quot;
    }
  },
  &quot;title&quot;: &quot;Example CType&quot;,
  &quot;type&quot;: &quot;object&quot;
}</pre>
    </div>
  </fieldset>
</section>
`;
